--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@ title = "CRI@ÉCPKN"
 
 
 paginate = 11
-copyright = "&copy;2021 <a href=\"https://sino.github.io/\">CRI@ÉCPKN</a> All rights reserved. | <a href=\"http://creativecommons.org/licenses/by-nc/4.0/\">CC BY-NC 4.0</a>"
+copyright = "&copy;2021 <a href=\"https://sino.github.io/\">CRI@ÉCPKN</a> All rights reserved. | <a href=\"http://creativecommons.org/licenses/by-nc/4.0/\">CC BY-NC 4.0</a> | "
 enableEmoji = true
 enableGitInfo = false
 summaryLength = 75
