--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,11 +17,11 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           # hugo-version: '${{ steps.hugo-version.outputs.HUGO_VERSION }}'
-          hugo-version: '0.79.1'
+          hugo-version: '0.85.0'
           # extended: true
 
       - name: Build
-        run: hugo --baseUrl="https://sino-crdc.github.io"
+        run: hugo --baseUrl="https://sino-crdc.github.io" --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -31,4 +31,6 @@ jobs:
           publish_branch: gh-pages
           publish_dir: ./public
           full_commit_message: ${{ github.event.head_commit.message }}
-          keep_files: false
+          force_orphan: true
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
