--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo --baseUrl="https://sino-crdc.github.io" --minify
+        run: hugo --baseUrl="https://sino-crdc.github.io"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
